# FiberForge

./: .gitignore  .sqllsrc.json  .tasks  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  scratch.txt
fiberforge/: __main__.py
fiberforge/Textified/: __init__.py.txt
fiberforge/Textified/app/: __main__.py.txt  app.py.txt
fiberforge/Textified/app/views/: job_details.py.txt  job_list.py.txt  run_details.py.txt  run_list.py.txt
fiberforge/Textified/models/: __init__.py.txt  can.py.txt  common.py.txt  fiber_run.py.txt  filters.py.txt  ids.py.txt  job.py.txt  span.py.txt  time_clock.py.txt
fiberforge/Textified/persistence/: __init__.py.txt  json_repo.py.txt
fiberforge/Textified/services/: continuity.py.txt  lengths.py.txt  lookup.py.txt  run_builder.py.txt
fiberforge/Textified/tests/: jb0002486506.py.txt  overview.py.txt  test_cfat.py.txt  test_normalization.py.txt  test_show_methods.py.txt
fiberforge/Textified/v1/: fiber_math.py.txt  fiber_resize.py.txt  job_docs.py.txt  midpoint_finder.py.txt  slack_locator.py.txt  span_calculator.py.txt  utils.py.txt
fiberforge/app/: main.py  style.tcss
fiberforge/app/panels/: details.py  job_list.py  list_common.py  run_list.py
fiberforge/app/screens/: job_screen.py  quit_screen.py
fiberforge/app/ui/forms/: base_form.py  custom_fields.py  job_form.py
fiberforge/app/views/: __init__.py  job_list.py  run_details.py
fiberforge/models/: common.py  fiber_run.py  filters.py  job.py  mux.py  time_clock.py
fiberforge/persistence/: json_repo.py  sqlite_repo.py
fiberforge/services/: continuity.py  run_builder.py
src/: textify.py
src/fiberforge/: __init__.py  __main__.py
src/fiberforge/app/: main.py  messages.py  style.tcss
src/fiberforge/app/archive/: old_main.py  style.tcss
src/fiberforge/app/panels/: clock_details.py  details.py  job_details.py  job_list.py  list_common.py  (+1 more)
src/fiberforge/models/: __init__.py  common.py  devices.py  fiber_run.py  ids.py  job.py  span.py  time_clock.py
src/fiberforge/persistence/: __init__.py  compress_time_clock.sql  database.py  schema.sql  sqlite_repo.py
src/fiberforge/services/: __init__.py  lengths.py  lookup.py  run_builder.py
tests/: test_files_output.py  test_time_calculations.py
(+12 files in other folders)
