[project]
name = "fiberforge"
version = "0.1.0"
description = "A domain-driven fiber network modeling and TUI application."
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Jim Hessin", email = "you@example.com" }]
requires-python = ">=3.12,<4.0"

dependencies = ["textual>=0.58.0", "rich>=13.7.0", "orjson>=3.10.0", "pyperclip (>=1.11.0,<2.0.0)"]

[project.scripts]
fiberforge = "fiberforge.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
textual-dev = "^1.5.0"
