[project]
name = "fiberforge"
version = "0.0.0.dev1"
description = "A domain-driven fiber network modeling and TUI application."
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Jim Hessin", email = "jhessin@gmail.com" }]
requires-python = ">=3.12,<4.0"

dependencies = [

  "textual>=0.58.0",
  "rich>=13.7.0",
  "orjson>=3.10.0",
  "pyperclip>=1.11.0,<2.0.0",
  "msgpack>=1.1.0,<1.2.0",
]
[dependency-groups]
dev = [
  "msgpack-types>=0.7.0,<0.8.0", # Corrected back to the valid PyPI package
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.4.0,<0.5.0",
  "mypy>=1.10.0,<2.0.0",
  "textual-dev>=1.5.0,<2.0.0",
  "ipython>=9.14.1",
]
