[project]
name = "fiberforge"
version = "0.0.0.dev1"
description = "A domain-driven fiber network modeling and TUI application."
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Jim Hessin", email = "jhessin@gmail.com" }]
requires-python = ">=3.12,<4.0"

dependencies = [
  "textual>=0.58.0",
  "rich>=13.7.0",
  "pyperclip>=1.11.0,<2.0.0",
  "dill>=0.4.1",
]
[dependency-groups]
dev = [
  # Corrected back to the valid PyPI package
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.4.0,<0.5.0",
  "mypy>=1.10.0,<2.0.0",
  "textual-dev>=1.5.0,<2.0.0",
  "ipython>=9.14.1",
]

[project.scripts]
fiberforge = "fiberforge:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
